--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -56,7 +57,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    //noinspection GradleCompatible
-//    implementation 'com.android.support:design:28.0.0'
 
+    //For phone number input
+    implementation 'com.hbb20:ccp:2.6.0'
+
+    //Razorpay integration
+    implementation 'com.razorpay:checkout:1.6.19'
+
+    //for refresher layout
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
